--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
     "url": "https://github.com/ctalv/Professional-README-Generator/issues"
   },
   "homepage": "https://github.com/ctalv/Professional-README-Generator#readme",
-  "description": ""
+  "description": "## Description sdfksjdf",
+  "devDependencies": {}
 }
