--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^8.2.4"
+    "inquirer": "^8.2.5"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,5 @@
     "url": "https://github.com/ctalv/Professional-README-Generator/issues"
   },
   "homepage": "https://github.com/ctalv/Professional-README-Generator#readme",
-  "description": "## Description sdfksjdf",
-  "devDependencies": {}
+  "description": "## Description sdfksjdf"
 }
